--- a/main_pg.html
+++ b/main_pg.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">    
-    <link rel="stylesheet" href="css/fund.css">
+    <link rel="stylesheet" href="css/main_pg.css">
 </head>
 
 <body>
@@ -64,34 +64,13 @@
     </header>
 
     <section>
-        <div class="sub-banner"></div>
-        <div class="sub-nav">버튼들어갈 예정</div>
+        <div class="main-banner">
+            <img src="images/main-banner/main_prev_btn.png" alt="main_prev_btn">
+            <h1>고객의 기대와 믿음에 부응하는 기업</h1>
+            <img src="images/main-banner/main_next_btn.png" alt="main_next_btn">
+        </div>
     </section>
-    <main id="Fund_page" class="container">
-        <div class="title-name">
-            <h3>Fund Information</h3>
-            <h1>펀드정보</h1>
-        </div>
-        <div class="title-suv">
-            <h2 class="title-sub">가치주</h2>
-            <button class="btn"><a href="#">대표펀드 전체보기</a></button>
-        </div>
-        <div class="title-text">
-            <p class="a">가치투자의 名家 신영자산운용의 정통 가치주 펀드인 마라톤 시리즈 또는 기업의 내재가치를 심도 있게 분석 합니다.</p>
-            <p class="b">단순히 주식의 시장가치가 아닌 기업의 내재가치를 심도 있게 분석합니다.</p>
-        </div>
-        <div class="box1">
-            <h2>신영마라톤증권투자신탁(주식)C형</h2>
-            <h3>(주식형)</h3>
-            <p class="text-1">신탁재산 운용 : 주식최저비율 60%, 주식최고비율 100%, 채권최고비율 40%</p>
-            <p class="text-2">신탁보수 : 총 연 1.49%</p>
-            <p class="text-3">( 판매 1%, 운용 0.46%, 수탁 0.025%, 사무관리 0.005%, 평가사 0%)</p>
-            <button class="btn-01"><a href="#">상세정보 +</a></button>
-            <!-- <img src="images/main-banner/이미지.png" alt="absolute"> -->
-        </div>
-        <div>
-            <img class="bnbn1" src="images/main-banner/이미지.png" alt="bnbn1">
-        </div>
+    <main id="history" class="container">
 
     </main>
 
